Issue #915 - fixed position and z-index FormUpload
Close #915

--- a/webcompat/static/css/development/components/button.css
+++ b/webcompat/static/css/development/components/button.css
@@ -82,4 +82,5 @@
     right: 0;
     bottom: 0;
     left: 0;
+    cursor: pointer;
   }
